crates/check_cli/tests/snapshots/main_cases_handle_svelte_files/format_svelte_carriage_return_line_feed_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.svelte`

```svelte
<script>
  const a    = "b";
</script>
<div></div>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.svelte format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   <script>␍
    2   │ - ··const·a····=·"b";␍
      2 │ + const·a·=·"b";
    3 3 │   </script>␍
    4 4 │   <div></div>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
