crates/check_cli/tests/snapshots/main_cases_handle_svelte_files/format_svelte_ts_context_module_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.svelte`

```svelte
<script context="module" lang="ts">
import Button from "./components/Button.svelte";
const hello: string = "world";
</script>
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
