crates/check_cli/tests/snapshots/main_cases_handle_svelte_files/lint_stdin_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```

# Termination Message

```block
stdin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The contents aren't fixed. Use the `--write` flag to fix them.
  


```

# Emitted Messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```
