crates/check_cli/tests/snapshots/main_cases_handle_svelte_files/lint_stdin_write_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
# Input messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```

# Emitted Messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```
