crates/check_cli/tests/snapshots/main_cases_handle_svelte_files/sorts_imports_check.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `file.svelte`

```svelte
<script lang="ts">
import Button from "./components/Button.svelte";
import * as svelteUse from "svelte-use";
</script>
<div></div>
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.svelte:2:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The imports and exports are not sorted.
  
    1 │ <script lang="ts">
  > 2 │ import Button from "./components/Button.svelte";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │ import * as svelteUse from "svelte-use";
    4 │ </script>
  
  i Safe fix: Organize Imports (Check)
  
    1   │ - import·Button·from·"./components/Button.svelte";
    2   │ - import·*·as·svelteUse·from·"svelte-use";
      1 │ + import·*·as·svelteUse·from·"svelte-use";
      2 │ + import·Button·from·"./components/Button.svelte";
    3 3 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
